examples/failing/1733.purs
-- @shouldFailWith UnknownValue

module Main where

import Thingy as Thing

main = Thing.doesntExist "hi"

module Thingy where

foo :: Int
foo = 1

